change to layout to use sticky; fix layout breaking boundaries;

--- a/src/ui/Page.js.css
+++ b/src/ui/Page.js.css
@@ -1,10 +1,6 @@
 :host {
-    display: flex;
+    display: block;
     width: 100%;
     height: 100%;
     overflow: hidden;
-}
-:slotted:not(.active),
-:slotted:not(emc-page) {
-    display: none;
 }
