--- a/src/ui/layout/Layout.js.css
+++ b/src/ui/layout/Layout.js.css
@@ -2,22 +2,35 @@
     display: flex;
     justify-content: stretch;
     align-items: stretch;
+    min-width: 100%;
     min-height: 100%;
 }
 ::slotted(:not(:first-child)) {
     display: none;
 }
 ::slotted(.panel) {
+    width: 100%;
+    height: 100%;
     padding: 5px;
     border-style: solid;
     border-width: 2px;
     border-color: var(--page-border-color, #ffffff);
-    overflow: hidden;
 }
 ::slotted(.error-panel) {
+    width: 100%;
+    height: 100%;
     padding: 10px;
     border-style: solid;
     border-width: 2px;
     border-color: var(--page-border-color, #ffffff);
     overflow: hidden;
+}
+
+:host > ::slotted(*) {
+    flex-grow: 0;
+    flex-shrink: 0;
+    width: auto;
+    height: auto;
+    min-width: 100%;
+    min-height: 100%;
 }
