--- a/src/ui/layout/Panel.js.css
+++ b/src/ui/layout/Panel.js.css
@@ -1,4 +1,3 @@
 :host {
-    min-height: 100%;
-    min-width: 100%;
+    overflow: hidden;
 }
