--- a/src/ui/layout/panel/HBox.js.css
+++ b/src/ui/layout/panel/HBox.js.css
@@ -2,17 +2,26 @@
     display: flex;
     flex-direction: row;
     flex-grow: 1;
+    width: fit-content;
     min-height: min-content;
     min-width: min-content;
+    overflow-y: auto;
 }
 :host > ::slotted(*) {
     flex-grow: 0;
     flex-shrink: 0;
+    height: auto;
+    min-height: 100%;
+}
+:host > ::slotted(*:not(emc-panel-vbox):not(emc-panel-hbox)) {
+    position: sticky;
+    top: 0;
+    bottom: 0;
 }
 :host(.stretchlast) > ::slotted(:last-child),
 :host > ::slotted(.autosize) {
     flex-grow: 1;
-    flex-shrink: 1;
+    flex-shrink: 0;
 }
 :host > ::slotted(.panel) {
     border-style: solid;
